@@ -1,0 +1,18 @@
+# qproperty-type-mismatch
+
+Warns when any of the functions or variables declared in a Q_PROPERTY have types, arguments or return types differing with the Q_PROPERTY.
+
+That is, this will warn on every member function here :
+
+```
+class Widget : public QWidget {
+Q_OBJECT
+Q_PROPERTY(bool foo READ foo WRITE setFoo NOTIFY fooChanged)
+
+public:
+  int foo() const;
+  void setFoo(float);
+signals:
+  void fooChanged();
+}
+```
