@@ -1,0 +1,12 @@
+qproperty-type-mismatch/main.cpp:22:5: warning: Q_PROPERTY 'r_bad' of type 'int' is mismatched with method 'r_bad' of return type 'float' [-Wclazy-qproperty-type-mismatch]
+qproperty-type-mismatch/main.cpp:25:5: warning: Q_PROPERTY 'm_bad' of type 'int' is mismatched with member 'm_bad' of type 'float' [-Wclazy-qproperty-type-mismatch]
+qproperty-type-mismatch/main.cpp:30:5: warning: Q_PROPERTY 'rw_bad' of type 'int' is mismatched with method 'rw_bad' of return type 'float' [-Wclazy-qproperty-type-mismatch]
+qproperty-type-mismatch/main.cpp:31:5: warning: Q_PROPERTY 'rw_bad' of type 'int' is mismatched with method 'set_rw_bad' with parameter of type 'float' [-Wclazy-qproperty-type-mismatch]
+qproperty-type-mismatch/main.cpp:36:5: warning: Q_PROPERTY 'rw_bad_cref' of type 'int' is mismatched with method 'rw_bad_cref' of return type 'float' [-Wclazy-qproperty-type-mismatch]
+qproperty-type-mismatch/main.cpp:37:5: warning: Q_PROPERTY 'rw_bad_cref' of type 'int' is mismatched with method 'set_rw_bad_cref' with parameter of type 'float' [-Wclazy-qproperty-type-mismatch]
+qproperty-type-mismatch/main.cpp:42:5: warning: Q_PROPERTY 'rw_bad_ptr' of type 'int*' is mismatched with method 'rw_bad_ptr' of return type 'float*' [-Wclazy-qproperty-type-mismatch]
+qproperty-type-mismatch/main.cpp:43:5: warning: Q_PROPERTY 'rw_bad_ptr' of type 'int*' is mismatched with method 'set_rw_bad_ptr' with parameter of type 'float*' [-Wclazy-qproperty-type-mismatch]
+qproperty-type-mismatch/main.cpp:46:5: warning: Q_PROPERTY 'rw_bad' of type 'int' is mismatched with signal 'rw_bad_changed' with parameter of type 'float' [-Wclazy-qproperty-type-mismatch]
+qproperty-type-mismatch/main.cpp:48:5: warning: Q_PROPERTY 'rw_bad_cref' of type 'int' is mismatched with signal 'rw_bad_cref_changed' with parameter of type 'float' [-Wclazy-qproperty-type-mismatch]
+qproperty-type-mismatch/main.cpp:50:5: warning: Q_PROPERTY 'rw_bad_ptr' of type 'int*' is mismatched with signal 'rw_bad_ptr_changed' with parameter of type 'float*' [-Wclazy-qproperty-type-mismatch]
+qproperty-type-mismatch/main.cpp:60:5: warning: Q_PROPERTY 'bad' of type 'int' is mismatched with member 'bad' of type 'float' [-Wclazy-qproperty-type-mismatch]
