@@ -110,6 +110,7 @@
   - New Checks:
     - heap-allocated-small-trivial-type
     - signal-with-return-value
+    - qproperty-type-mismatch
   - Moved all level3 checks to manual level. Doesn't make sense to enable all of them. Each one must be
   carefully considered.
   - Fixit infrastructure was overhauled
